# VIP-KRITIMUSIC34NEW

./: README.md  pyproject.toml
VIPMUSIC/core/: call.py
VIPMUSIC/plugins/bot/: help.py  start.py
VIPMUSIC/plugins/play/: play.py
VIPMUSIC/plugins/sudo/: heroku.py
VIPMUSIC/plugins/tools/: vcstart.py
VIPMUSIC/utils/inline/: play.py  queue.py  start.py
VIPMUSIC/utils/stream/: stream.py
config/: config.py
strings/langs/: en.yml
