[project]
name = "VIPMUSIC"
version = "0.1.0"
description = "Telegram Music Bot"
requires-python = ">=3.10"
dependencies = [
    "pyromod",
    "openai",
    "aiofiles",
    "aiohttp",
    "beautifulsoup4",
    "dnspython",
    "ffmpeg-python",
    "gitpython",
    "hachoir",
    "heroku3",
    "httpx[http2] == 0.27.2",
    "lyricsgenius",
    "motor",
    "wget",
    "pillow==9.5.0",
    "pymongo==3.12.0",
    "psutil",
    "pytube",
    "pykeyboard",
    "unidecode",
    "py-tgcalls == 1.2.9",
    "ntgcalls == 1.1.2",
    "python-dotenv",
    "pyyaml",
    "requests",
    "speedtest-cli",
    "spotipy",
    "tgcrypto",
    "urllib3",
    "uvloop; platform_system != 'Windows'",
    "flask",
    "gunicorn==20.1.0",
    "yt-dlp",
    "youtube-search-python",
    "youtube-search",
    "https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
